Updating the history, and setting the version number to something that is vaguely accurate.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,5 +1,69 @@
-0.1 (xxxx-xx-xx)
-----------------
+Changelog
+=========
 
-- Created recipe with ZopeSkel
-  [Richard Waid]
+4.0.0 (2014-05-16)
+------------------
+
+* Refactor of some code to the ``gs.recipe.base.Recipe`` abstract
+  base class.
+* Python 3 support.
+* Unit tests.
+* Attempt to reduce the number of options passed to the recipe.
+* Updating the README.
+
+3.0.0 (2012-10-18)
+------------------
+
+* Moving the creation of database tables to
+  ``gs.recipe.createtables``
+* Added attempts at being robust.
+
+2.0.0 (2012-04-19)
+------------------
+
+* Removing database creation. (Setup of database tables remains.)
+
+1.5.0 (2011-10-26)
+------------------
+
+* Updates to ``smtp2zope``
+* Adding a port.
+
+1.4.1 (2011-07-25)
+------------------
+
+* Naming the initial site ``initial_site``
+* SQL Changes
+
+1.4.0 (2011-05-05)
+------------------
+
+* Following changes to the SQL
+
+
+1.3.0 (2011-01-27)
+------------------
+
+* Following changes to the SQL
+
+1.2.0 (2010-09-01)
+------------------
+
+* Following the changes to the products with SQL
+* Updating ``version.py``
+
+1.1.0 (2010-04-28)
+------------------
+
+* Added an initial GroupServer user.
+* Added SMTP configuration.
+
+1.0.0 (2010-03-25)
+------------------
+
+* Deal with the creation of the SQL tables
+
+0.0.1 (2009-08-05)
+------------------
+
+* Initial version
